# kurage

./: README.md  pyproject.toml
.github/workflows/: python.yml
src/: kurage.py
src/kurage/: __init__.py
tests/: test_kurage.py
