[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.28,<0.10" ]

[project]
name = "kurage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "anthropic>=0.79",
  "dotenv>=0.9.9",
]
scripts.kurage = "kurage:main"

[dependency-groups]
dev = [
  "pyproject-fmt>=2.16,<2.17",
]
