[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.28,<0.10" ]

[project]
name = "kurage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "anthropic>=0.79",
  "dotenv>=0.9.9",
  "prompt-toolkit>=3.0.52",
]
scripts.kurage = "kurage:main"

[dependency-groups]
dev = [
  "pyproject-fmt>=2.16,<2.17",
  "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py314"
lint.select = [ "B", "C4", "E", "F", "I", "N", "SIM", "UP", "W" ]

[tool.tox]
requires = [ "tox>=4.19" ]
env_list = [ "lint", "format", "format_pyproject" ]
env.format.description = "Check format"
env.format.commands = [ [ "ruff", "format", "--check" ] ]
env.format_pyproject.description = "Check pyproject.toml format"
env.format_pyproject.commands = [ [ "pyproject-fmt", "--check", "pyproject.toml" ] ]
env.lint.description = "Lint"
env.lint.commands = [ [ "ruff", "check" ] ]
env.type.description = "Run type checks"
env.type.commands = [ [ "mypy", "." ] ]
env_run_base.dependency_groups = [ "dev" ]
