[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=42" ]

[project]
name = "kurage"
version = "0.1.0"
description = "A simple chat interface using Anthropic/OpenAI API"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "anthropic>=0.79",
  "openai>=2.44",
]
scripts.kurage = "kurage:main"

[dependency-groups]
dev = [
  "pyproject-fmt>=2.16,<2.17",
  "pyright>=1.1.411",
  "pytest>=9.1.1",
  "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py314"
lint.select = [ "B", "C4", "E", "F", "I", "N", "SIM", "UP", "W" ]

[tool.tox]
requires = [ "tox>=4.19" ]
env_list = [ "3.14", "lint", "format", "format_pyproject", "type" ]
env.format.description = "Check format"
env.format.commands = [ [ "ruff", "format", "--check" ] ]
env.format_pyproject.description = "Check pyproject.toml format"
env.format_pyproject.commands = [ [ "pyproject-fmt", "--check", "pyproject.toml" ] ]
env.lint.description = "Lint"
env.lint.commands = [ [ "ruff", "check" ] ]
env.type.description = "Run type checks"
env.type.commands = [ [ "pyright" ] ]
env_run_base.description = "Run tests under {base_python}"
env_run_base.dependency_groups = [ "dev" ]
env_run_base.commands = [ [ "pytest" ] ]

[tool.pyright]
typeCheckingMode = "strict"
